Removed real user name
Removed real user name

--- a/code/chqa-interface-eval-web/src/main/resources/templates/experiment.userselect.html
+++ b/code/chqa-interface-eval-web/src/main/resources/templates/experiment.userselect.html
@@ -8,14 +8,14 @@
         <div>
             <form type="submit" method="post">
                 <select name="user" id="user">
-                    <option value="1:Katrina">Katrina</option>
-                    <option value="2:Brandon">Brandon</option>
-                    <option value="3:Sara">Sara</option>
-                    <option value="4:Yasmeen">Yasmeen</option>
-                    <option value="5:Mark">Mark</option>
-                    <option value="6:Ishita">Ishita</option>
-                    <option value="7:Bill">Bill</option>
-                    <option value="8:Saathvik">Saathvik</option>                    
+                    <option value="1:User1">User1</option>
+                    <option value="2:User2">User2</option>
+                    <option value="3:User3">User3</option>
+                    <option value="4:User4">User4</option>
+                    <option value="5:User5">User5</option>
+                    <option value="6:User6">User6</option>
+                    <option value="7:User7">User7</option>
+                    <option value="8:User8">User8</option>                    
                 </select>
                 
                 <input type="submit" value="Start" />
